# finders-keepers

./: CMakeLists.txt  README.md  compile_flags.txt  finders_keepers.c  getdirection.c  getspeech.c  getspeech.h  pacman.c  refactor.c  speechrecog.py  speechrecogsetup.txt
.cache/clangd/index/: finders_keepers.c.C80E5795FCBCFDEC.idx  getdirection.c.B2E5088FC63F02A7.idx  getdirection.c.D8EABA352127FC30.idx  getdirection.h.CDDAD3185F6508BC.idx  getdirection.h.F58E110ADB905023.idx  pacman.c.AD9E631F9A165160.idx  refactor.c.6300F22948A15023.idx  sokol.c.5B4032EB0F96CC6F.idx  sokol_app.h.9BB8EA6EA85CBC4C.idx  sokol_audio.h.B71BEDABCED9CEF7.idx  sokol_gfx.h.7EE119C0CC605628.idx  sokol_glue.h.D7FEAAB642C90B69.idx  sokol_log.h.1D46F2FCEFCAD569.idx
sokol/: getdirection.c  getdirection.h  sokol_app.h
